// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Signals > analysis 'automation/dallasemard' 1`] = `
{
  "classification": "mixed",
  "flags": [
    {
      "detail": "Account is 37 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "11 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
  ],
  "profile": {
    "age": 37,
    "repos": 33,
  },
  "score": 65,
}
`;

exports[`Signals > analysis 'automation/evelynstehr' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "Account is 33 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "4 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
    {
      "detail": "100% of activity on other people's repos",
      "label": "Mostly external activity",
      "points": 20,
    },
  ],
  "profile": {
    "age": 33,
    "repos": 1,
  },
  "score": 45,
}
`;

exports[`Signals > analysis 'automation/hymanlittle-carroll' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "23/24 branch creations followed by PRs within 72s",
      "label": "Automated branch→PR workflow",
      "points": 35,
    },
    {
      "detail": "38 repos forked within 24 hours",
      "label": "Extreme fork automation",
      "points": 85,
    },
  ],
  "profile": {
    "age": 1347,
    "repos": 172,
  },
  "score": 0,
}
`;

exports[`Signals > analysis 'automation/leebogisich' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "21 comments to 21 different repos in 1.3 minutes (16.2 comments/min)",
      "label": "Issue comment spam",
      "points": 40,
    },
    {
      "detail": "31/31 branch creations followed by PRs within 71s",
      "label": "Automated branch→PR workflow",
      "points": 35,
    },
    {
      "detail": "6 repos forked within 24 hours",
      "label": "Multiple forks",
      "points": 26,
    },
  ],
  "profile": {
    "age": 1096,
    "repos": 134,
  },
  "score": 0,
}
`;

exports[`Signals > analysis 'automation/marshalltreutel' 1`] = `
{
  "classification": "automation",
  "flags": [
    {
      "detail": "Account is 33 days old",
      "label": "Young account",
      "points": 10,
    },
    {
      "detail": "5 commits within very short intervals",
      "label": "High commit frequency",
      "points": 25,
    },
    {
      "detail": "100% of activity on other people's repos",
      "label": "Mostly external activity",
      "points": 20,
    },
  ],
  "profile": {
    "age": 33,
    "repos": 1,
  },
  "score": 45,
}
`;

exports[`Signals > analysis 'automation/raymondhowell' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 792,
    "repos": 32,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'automation/vernagrant' 1`] = `
{
  "classification": "mixed",
  "flags": [
    {
      "detail": "14/20 branch creations followed by PRs within 41s",
      "label": "Automated branch→PR workflow",
      "points": 35,
    },
  ],
  "profile": {
    "age": 396,
    "repos": 30,
  },
  "score": 65,
}
`;

exports[`Signals > analysis 'user/jacquelyngoldner' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 3634,
    "repos": 102,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/jeannettebartoletti' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 3220,
    "repos": 859,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/lauriemedhurst' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 5907,
    "repos": 52,
  },
  "score": 100,
}
`;

exports[`Signals > analysis 'user/michellehomenick' 1`] = `
{
  "classification": "organic",
  "flags": [],
  "profile": {
    "age": 4576,
    "repos": 29,
  },
  "score": 100,
}
`;
